# rubiks.hs

./: .gitignore  LICENSE  README.md  rubiks.cabal  sources.txt
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: package.cache  rubiks-0.1.0.0-inplace.conf
src/: Cube.hs  Display.hs  Model.hs  Move.hs  MoveSpec.hs  Scrambler.hs
src/Solve/: Cross.hs  F2L.hs  OLL.hs  PLL.hs  Solver.hs
test/: Main.hs
