cabal-version:      3.14
name:               rubiks
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Zeno Leonardi
maintainer:         zenoelioleone@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Scrambler, Move, Model, Display, MoveSpec
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0, random, QuickCheck
    hs-source-dirs:   src
    default-language: GHC2021

executable rubiks
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.3.0,
        rubiks

    hs-source-dirs:   app
    default-language: GHC2021

test-suite rubiks-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        rubiks,
        QuickCheck
